--- a/BeePartTime/Base.lproj/Main.storyboard
+++ b/BeePartTime/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
             </objects>
             <point key="canvasLocation" x="79" y="116"/>
         </scene>
-        <!--Item-->
+        <!--工作清單-->
         <scene sceneID="5xs-UB-pLd">
             <objects>
                 <viewController id="eWW-KV-jIC" sceneMemberID="viewController">
@@ -61,7 +61,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oG7-ss-t4f">
-                                <rect key="frame" x="16" y="128" width="343" height="468"/>
+                                <rect key="frame" x="16" y="128" width="343" height="427"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
@@ -76,13 +76,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="ZWz-YX-dmo"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Y2k-Gx-JtC"/>
+                    <tabBarItem key="tabBarItem" title="工作清單" image="worklist" id="Y2k-Gx-JtC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mRz-7C-gvG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1695" y="-743"/>
+            <point key="canvasLocation" x="1778" y="-573"/>
         </scene>
-        <!--Item-->
+        <!--即時定位-->
         <scene sceneID="lio-1S-Leb">
             <objects>
                 <viewController id="kL6-3Y-3w5" sceneMemberID="viewController">
@@ -101,13 +101,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="83J-Fm-5Dh"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Nh7-Rr-PpF"/>
+                    <tabBarItem key="tabBarItem" title="即時定位" id="Nh7-Rr-PpF"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="215-bY-XoC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2423" y="-743"/>
+            <point key="canvasLocation" x="3154" y="-703"/>
         </scene>
-        <!--Item-->
+        <!--我的最愛-->
         <scene sceneID="JrL-cD-HEg">
             <objects>
                 <viewController id="8hX-rh-yDH" sceneMemberID="viewController">
@@ -126,36 +126,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="5Cu-ho-xnr"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="oG9-M4-t3b"/>
+                    <tabBarItem key="tabBarItem" title="我的最愛" image="honeybet" id="oG9-M4-t3b"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UrQ-nr-4pj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2182" y="117"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="rwX-ao-bKK">
-            <objects>
-                <viewController id="WGc-7m-Nhb" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="mjQ-Lo-NxM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="第四頁" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EEr-VQ-YPK">
-                                <rect key="frame" x="161" y="323" width="52" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <viewLayoutGuide key="safeArea" id="huU-DM-hhT"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="sya-1r-84c"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UWY-20-Oyj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2975" y="116"/>
+            <point key="canvasLocation" x="3967" y="-286"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gta-ih-151">
@@ -173,12 +148,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Hd-LA-UHg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-948" y="138"/>
+            <point key="canvasLocation" x="-914" y="161"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--My Tab Bar Controller-->
         <scene sceneID="XM2-WT-xCH">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Nnl-ol-wZK" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Nnl-ol-wZK" customClass="myTabBarController" customModule="BeePartTime" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Cdv-oj-8TN">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -189,7 +164,6 @@
                         <segue destination="eWW-KV-jIC" kind="relationship" relationship="viewControllers" id="aev-O1-JK1"/>
                         <segue destination="kL6-3Y-3w5" kind="relationship" relationship="viewControllers" id="zdh-oV-dfz"/>
                         <segue destination="8hX-rh-yDH" kind="relationship" relationship="viewControllers" id="CkM-Zp-FYw"/>
-                        <segue destination="WGc-7m-Nhb" kind="relationship" relationship="viewControllers" id="jbq-CD-FH8"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PZR-5k-5kN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -317,7 +291,11 @@
             <point key="canvasLocation" x="406" y="-788"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="honeybet" width="42" height="42"/>
+        <image name="worklist" width="42" height="42"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="btC-tY-jrk"/>
+        <segue reference="m0Z-Zz-eho"/>
     </inferredMetricsTieBreakers>
 </document>
